--- a/app/src/main/res/layout/dictionary_entry.xml
+++ b/app/src/main/res/layout/dictionary_entry.xml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    tools:showIn="@layout/ocr_translation_sheet">
+    android:layout_margin="8dp"
+    app:contentPadding="8dp">
 
-    <TextView
-        android:id="@+id/dictionary_word"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:textStyle="bold"
-        app:autoSizeTextType="uniform"
-        tools:text="プレイスホルダー" />
+        android:orientation="vertical"
+        tools:showIn="@layout/ocr_translation_sheet">
 
-    <TextView
-        android:id="@+id/dictionary_meaning"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        app:autoSizeTextType="uniform"
-        tools:text="Item which is only used to test things" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</TableRow>
+            <TextView
+                android:id="@+id/dictionary_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:gravity="start"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                tools:text="探す" />
+
+            <TextView
+                android:id="@+id/dictionary_reading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="(さがす)" />
+        </TableRow>
+
+        <TextView
+            android:id="@+id/dictionary_meaning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            tools:text=" \u25CF to look for something\n \u25CF to die" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
