--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_dictionary"
+        android:icon="@drawable/ic_book_24dp"
+        android:title="@string/action_dictionary"
+        app:iconTint="?attr/colorOnPrimary"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_ocr"
         android:icon="@drawable/ic_select_all_24dp"
         android:title="@string/action_ocr"
